Fixes w.r.t. overlapping annotations

--- a/public/stylesheets/text-annotation.css
+++ b/public/stylesheets/text-annotation.css
@@ -1,4 +1,4 @@
-#fulltext {
+#text {
   padding:20px;
   line-height:140%;
   font-family:"Times New Roman", Times, serif;
